# tales-tree

./: .env  Cargo.toml  Makefile.toml  README.md
configuration/: base.yaml
crates/all/: Cargo.toml
crates/all/src/: clock.rs
crates/all/src/commands/: create_fragment.rs  fork_fragment.rs  like_fragment.rs  mod.rs  review_fork.rs  unfollow_user.rs  update_fragment.rs
crates/all/src/events/: mod.rs
crates/all/src/storage/: mod.rs
crates/all/src/storage/active/: event.rs  fragment.rs  like.rs  task.rs  user.rs
crates/all/src/storage/model/: event.rs  user.rs
crates/all/tests/: command_bus_it.rs  fragment_storage_it.rs  update_fragment_it.rs
crates/all/tests/commons/: mod.rs
crates/all/tests/fixtures/: fragment.rs
crates/all/tests/mock/: ids.rs
crates/commons/: Cargo.toml
crates/commons/src/: actor.rs  commands.rs  events.rs  fragment.rs  id.rs  lib.rs  review.rs  time.rs
crates/commons/src/configuration/: settings.rs
crates/cqrs/: Cargo.toml
crates/cqrs/src/: lib.rs
crates/cqrs/src/command_bus/: bus.rs  command.rs  error.rs
crates/cqrs/src/command_bus/command/: create_fragment.rs  dislike_fragment.rs  follow_user.rs  fork_fragment.rs  like_fragment.rs  publish_fragment.rs  review_fork.rs  submit_fork.rs  unfollow_user.rs  update_fragment.rs
crates/cqrs/src/command_bus/commands/: create_fragment.rs  dislike_fragment.rs  follow_user.rs  fork_fragment.rs  like_fragment.rs  mod.rs  publish_fragment.rs  review_fork.rs  submit_fork.rs  unfollow_user.rs  update_fragment.rs
crates/cqrs/src/commands/: create_fragment.rs  dislike_fragment.rs  follow_user.rs  fork_fragment.rs  like_fragment.rs  mod.rs  publish_fragment.rs  review_fork.rs  unfollow_user.rs  update_fragment.rs
crates/cqrs/src/events/: mod.rs
crates/cqrs/tests/: command_bus_it.rs  create_fragment_it.rs  update_fragment_it.rs
crates/cqrs/tests/commons/: mod.rs
crates/cqrs/tests/fixtures/: fragment.rs  user.rs
crates/cqrs/tests/mock/: clock.rs  ids.rs
crates/cqrs/tests_/: update_fragment_it.rs
crates/cqrs/tests_/commons/: mod.rs
crates/cqrs/tests_/mock/: clock.rs  ids.rs
crates/rest/: Cargo.toml
crates/rest/src/: lib.rs  links.rs  main.rs  response.rs  server.rs
crates/rest/src/extractors/: user.rs
crates/rest/src/model/: error.rs  forks.rs  fragment_forks.rs  fragments.rs  mod.rs  resource.rs  reviews.rs  tales.rs
crates/rest/src/routes/: follow.rs  follower.rs  forks.rs  fragments.rs  health.rs  likes.rs  mod.rs  reviews.rs  tales.rs  user.rs
crates/storage/: Cargo.toml
crates/storage/migrations/: 20230919220010_initial_schema.down.sql  20230919220010_initial_schema.up.sql
crates/storage/src/: lib.rs
crates/storage/src/active/: event.rs  follow.rs  fragment.rs  like.rs  review.rs  task.rs  user.rs
crates/storage/src/model/: event.rs  follow.rs  fragment.rs  like.rs  review.rs  task.rs  user.rs
crates/storage/src/query/: event.rs  follow.rs  fragment.rs  like.rs  review.rs  task.rs  user.rs
crates/storage/tests/: fragment_storage_it.rs
deploy/: docker-compose.neo4j.yml  docker-compose.postgres.yml  docker-compose.rest.yml
migrations/: 20230919220010_initial_schema.down.sql  20230919220010_initial_schema.sql  20230919220010_initial_schema.up.sql
src/: actor.rs  id.rs  lib.rs
src/commands/: create_fragment.rs  create_tale.rs  dislike_fragment.rs  follow_user.rs  fork_fragment.rs  like_fragment.rs  mod.rs  publish_fragment.rs  review_fork.rs  unfollow_user.rs  update_fragment.rs
src/events/: mod.rs
src/storage/: event.rs  follow.rs  fragment.rs  like.rs  mod.rs  review.rs  tale.rs  task.rs  user.rs
src/storage/active/: event.rs  follow.rs  fragment.rs  like.rs  review.rs  task.rs  user.rs
src/storage/model/: follow.rs  fragment.rs  like.rs  mod.rs  review.rs  task.rs
tests/: command_bus_it.rs  create_frag_it.rs  create_fragment_it.rs  fragment_storage_it.rs  update_fragment.rs  update_fragment_it.rs
tests/commons/: mod.rs
tests/fixtures/: fragment.rs  mod.rs  user.rs
tests/mock/: clock.rs  ids.rs
