[package]
name = "tales-tree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1", features = ["serde", "v4"] }
chrono = "0.4"
thiserror = "1"
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
    "uuid",
    "chrono",
] }
tokio = { version = "1", features = ["full"] }
derive_builder = "0.12"
derive-getters = "0.3"
derive_setters = "0.1"
serde = { version = "1", features = ["derive"] }
async-trait = "0.1"
anyhow = "1"
tap = "1"
tracing = "0.1"
