[workspace]
resolver = "2"
members = ["crates/cqrs", "crates/storage", "crates/commons", "crates/rest"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
mockall_double = "0.3"
mockall = "0.11"
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
    "uuid",
    "chrono",
] }
tokio = { version = "1", features = ["full"] }
derive_builder = "0.12"
derive-getters = "0.3"
derive_setters = "0.1"
serde = { version = "1", features = ["derive"] }
async-trait = "0.1"
anyhow = "1"
tap = "1"
tracing = "0.1"
serde_json = "1"
actix-web = { version = "4" }
url = "2"
clap = "4"
strum = "0.25"
strum_macros = "0.25"
rstest = "0.18"
temp-env = "0.3"
config = "0.13"
secrecy = "0.8"
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-subscriber = "0.3"
tracing-test = "0.2"


[profile.release]
strip = true
lto = true
codegen-units = 1
