[package]
name = "commons"
version = "0.1.0"
edition = "2021"

[dependencies]
strum_macros = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
uuid = { workspace = true, features = ["fast-rng", "v4", "serde"] }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sqlx = { workspace = true, features = ["postgres", "runtime-tokio-rustls"] }
chrono = { workspace = true }
mockall = { workspace = true }
tracing = { workspace = true }
strum = { workspace = true, features = ["derive"] }
tap = { workspace = true }
anyhow = { workspace = true }
config = { workspace = true }
secrecy = { workspace = true, features = ["serde"] }

[dev-dependencies]
rstest = { workspace = true }
temp-env = { workspace = true }
