[package]
name = "rest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
commons = { path = "../../crates/commons" }
storage = { path = "../../crates/storage" }
cqrs = { path = "../../crates/cqrs" }
actix-web = { workspace = true }
