[package]
name = "storage"
version = "0.1.0"
edition = "2021"


[dependencies]
commons = { path = "../../crates/commons" }

tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
uuid = { workspace = true, features = ["fast-rng", "v4", "serde"] }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
derive-getters = { workspace = true }
sqlx = { workspace = true, features = ["postgres", "runtime-tokio-rustls"] }
chrono = { workspace = true }
async-trait = { workspace = true }
derive_builder = { workspace = true }
mockall = { workspace = true }
tracing = { workspace = true }
derive_setters = { workspace = true }
secrecy = { workspace = true }

[dev-dependencies]
